<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/showtitle"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/hello_world"
        tools:context=".MainActivity" />

    <com.baidu.mapapi.MapView
        android:id="@+id/bmapsView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true" />
    
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/location_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/my_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_location" />

                    <Button
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location" />

                    <Button
                        android:id="@+id/show_satellite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_satellite" />

                    <Button
                        android:id="@+id/show_traffic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_traffic" />

                    <Button
                        android:id="@+id/show_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_search" />

                    <Button
                        android:id="@+id/show_transitsearch_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_search_transit" />
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/search_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone" >

            <EditText
                android:id="@+id/search_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="130dp"
                android:hint="@string/search_text" />

            <Button
                android:id="@+id/search_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/search_close" />

            <Button
                android:id="@+id/search_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/search_close"
                android:text="@string/search_btn" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/transitsearch_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Start:" />

                <EditText
                    android:id="@+id/start_site"
                    android:layout_width="200dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="End:" />

                <EditText
                    android:id="@+id/end_site"
                    android:layout_width="200dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/search_transit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="公交搜索" />

                <Button
                    android:id="@+id/jc_search_transit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="驾车搜索" />

                <Button
                    android:id="@+id/bx_search_transit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="步行搜索" />

                <Button
                    android:id="@+id/search_transit_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_close" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>